# Blunder-Engine

./: .clang-format  .gitignore  .gitmodules  .tmp-editor-log.txt  .tmp-editor-verify.txt  .tmp-ssao-verify.txt  AGENTS.md  ANALYSIS_SUMMARY.txt  CMakeLists.txt  CMakeLists_linux.cmake  CMakePresets.json  CMakelists.txt  CONTENT_LAYOUT.md  CONTEXT.md  DETAILED_FINDINGS.md  README.md  SEARCH_FINDINGS_SUMMARY.txt  slint_bt_out.txt
engine/src/editor/: CMakeLists.txt
engine/src/editor/src/: main.cpp
engine/src/player/: CMakeLists.txt
engine/src/player/src/: main.cpp
engine/src/runtime/: CMakeLists.txt  engine.cpp  engine.h  pch.h
engine/src/runtime/core/base/: high_precision_timer.cpp  high_precision_timer.h  macro.h
engine/src/runtime/core/debug/: agent_debug_log.h
engine/src/runtime/core/event/: application_event.h  event.h  key_event.h  mouse_event.h
engine/src/runtime/core/layer/: layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
engine/src/runtime/core/log/: log_access.cpp  log_access.h  log_system.cpp  log_system.h
engine/src/runtime/core/math/: coordinate_system.cpp  coordinate_system.h  geometry.h  interpolation.h  math.h  math_types.h  math_utils.cpp  math_utils.h  transform.h
engine/src/runtime/core/memory/: allocators.cpp  allocators.h  eastl_allocator.cpp  memory_system.cpp  memory_system.h
engine/src/runtime/core/object/: behaviour_id.h  entity_store.h  object.cpp  object.h  object_db.cpp  object_db.h  object_id.h
engine/src/runtime/core/reflection/: class_db.cpp  class_db.h  engine_c_abi.cpp  engine_c_abi.h  export_macros.h  lifecycle.cpp  lifecycle.h  type_info.h  variant.cpp  variant.h
engine/src/runtime/function/editor/: document_history.cpp  document_history.h  document_history_helpers.cpp  document_history_helpers.h  editor_commands.cpp  editor_commands.h  editor_scene_edit_system.cpp  editor_scene_edit_system.h  editor_selection_system.cpp  editor_selection_system.h  hierarchy_system.cpp  hierarchy_system.h  hierarchy_types.h  inspector_transform_ops.cpp  inspector_transform_ops.h  viewport_pick_delivery.h  viewport_pick_system.cpp  viewport_pick_system.h
engine/src/runtime/function/global/: engine_host_mode.h  global_context.cpp  global_context.h
engine/src/runtime/function/imgui/: imgui_system.cpp  imgui_system.h
engine/src/runtime/function/render/: CMakeLists.txt  blinn_phong_editor_settings.h  editor_camera.cpp  editor_camera.h  gpu_mesh.cpp  gpu_mesh.h  offscreen_render_target.cpp  offscreen_render_target.h  opaque_mesh_draw.h  render_system.cpp  render_system.h  transform_edit_viewport_notify.cpp  transform_edit_viewport_notify.h  viewport_style.h
engine/src/runtime/function/scene/: entity.cpp  entity.h  entity_id.h  gltf_scene_importer.cpp  gltf_scene_importer.h  mesh_renderer_component.h  scene.h  scene_instance.cpp  scene_instance.h  scene_render_bridge.cpp  scene_render_bridge.h  scene_serializer.cpp  scene_serializer.h  scene_system.cpp  scene_system.h
engine/src/runtime/function/script/: dotnet_host.cpp  dotnet_host.h  play_tick_gate.h  scene_behaviour_mount.cpp  scene_behaviour_mount.h  scripts_builder.cpp  scripts_builder.h
engine/src/runtime/function/slint/: dock_chrome_icons.slint  docking_panel.slint  editor_window.slint  floating_panel_window.slint  play_dirty_scene_dialog.slint  project_manager.slint  slint_system.cpp  slint_system.h
engine/src/runtime/function/ui/: editor_preview_settings.h  editor_service_handles.h  editor_ui_presentation.h  ui_callback_binder.h  ui_context.cpp  ui_context.h  ui_event_queue.cpp  ui_event_queue.h  ui_events.h  ui_host.cpp  ui_host.h
engine/src/runtime/platform/file_system/: file_system.cpp  file_system.h
engine/src/runtime/platform/input/: input_system.cpp  input_system.h
engine/src/runtime/platform/window/: child_window_registry.cpp  child_window_registry.h  window_system.cpp  window_system.h
engine/src/runtime/project/: editor_launch.cpp  editor_launch.h  play_ipc.cpp  play_ipc.h  play_preflight.cpp  play_preflight.h  play_session_controller.cpp  play_session_controller.h  player_launch.cpp  player_launch.h  project_create.cpp  project_create.h  project_file.cpp  project_file.h
engine/src/runtime/resource/asset/: asset.h  asset_descriptor.h  asset_yaml.cpp  asset_yaml.h  guid.cpp  guid.h  material_asset.h  mesh_asset.h  scene_asset.h  shader_asset.h  texture2d_asset.h
engine/src/runtime/resource/asset_cook/: asset_compiler_service.cpp  asset_compiler_service.h  asset_cook_types.h  asset_watch_path.cpp  asset_watch_path.h  mesh_cooker.cpp  mesh_cooker.h  texture_cooker.cpp  texture_cooker.h
engine/src/runtime/resource/asset_dependency/: asset_dependency_graph.cpp  asset_dependency_graph.h
engine/src/runtime/resource/asset_import/: asset_import_service.cpp  asset_import_service.h
engine/src/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h  asset_manager_gltf.cpp  (+1 more)
engine/src/tests/: CMakeLists.txt  asset_compiler_freshness_test.cpp  asset_compiler_invalidate_test.cpp  asset_dependency_graph_test.cpp  asset_import_test.cpp  asset_manager_fast_path_test.cpp  asset_manager_guid_test.cpp  asset_pipeline_smoke_test.cpp  asset_registry_test.cpp  asset_watch_path_test.cpp  asset_yaml_test.cpp  behaviour_list_test.cpp  classdb_test.cpp  dotnet_host_test.cpp  editor_commands_test.cpp  editor_dotnet_host_test.cpp  editor_history_test.cpp  engine_c_abi_test.cpp  gizmo_dial_sides_test.cpp  gizmo_polyline_blender_aa_test.cpp  gizmo_sdf_aa_test.cpp  godot_editor_icons_test.cpp  inspector_transform_ops_test.cpp  native_abi_test.cpp  navigate_gizmo_style_test.cpp  object_db_test.cpp  outline_aa_test.cpp  outline_color_tests.cpp  overlay_line_aa_test.cpp  pick_broad_hits_test.cpp  pick_entity_promotion_test.cpp  pick_instance_buffer_test.cpp  play_ipc_test.cpp  play_pause_tick_gate_test.cpp  play_preflight_test.cpp  play_session_controller_test.cpp  player_launch_test.cpp  project_create_test.cpp  ptrcall_lifecycle_test.cpp  scene_behaviour_export_test.cpp  (+10 more)
engine/src/tools/: CMakeLists.txt
engine/src/tools/asset_compiler/: main.cpp
(+804 files in other folders)
